# lurch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codemap.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  codemap.md  main.rs
src/core/: account.rs  codemap.md  config.rs  curseforge.rs  curseforge_modpack.rs  forge.rs  import_export.rs  instance.rs  java.rs  launch.rs  launch_manager.rs  loader_profiles.rs  local_mods.rs  mod.rs  mod_cache.rs  modpack_manager.rs  modrinth.rs  modrinth_modpack.rs  servers.rs  shaders.rs  update.rs  version.rs  worlds.rs
src/theme/: codemap.md  mod.rs
src/theme/themes/: amethyst.json  ayu-dark.json  ayu-light.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  cherry-grove.json  creeper.json  deep-dark.json  dracula.json  end.json  everforest-dark.json  everforest-light.json  gruvbox-dark.json  gruvbox-light.json  high-contrast.json  kanagawa.json  lush-cave.json  monokai.json  nether.json  nord.json  ocean-monument.json  oled-black.json  one-dark.json  one-light.json  redstone.json  rose-pine-dawn.json  rose-pine-moon.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
src/ui/: accounts.rs  browse_common.rs  codemap.md  console.rs  helpers.rs  mod.rs  notifications.rs  settings.rs  sidebar.rs
src/ui/instances/: AGENTS.md  codemap.md  create_dialog.rs  edit_dialog.rs  mod.rs  modpack_browser.rs
src/ui/instances/detail/: codemap.md  mod.rs  servers_tab.rs  shaders_tab.rs  worlds_tab.rs
src/util/: codemap.md  paths.rs
(+4 files in other folders)
