[package]
name = "lurch"
version = "0.2.1"
edition = "2024"
description = "Just a Minecraft launcher"
license = "GPL-3.0-only"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
egui-phosphor = { version = "0.12", default-features = false, features = ["regular"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha1_smol = { version = "1", features = ["std"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
directories = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
zip = "2"
flate2 = "1"
tar = "0.4"
open = "5.3.3"
md5 = "0.7"
chrono = "0.4.44"
rayon = "1.10"
